<resources>
    <string name="app_name">Goodday</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="Languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Swift</item>
        <item>Python</item>
        <item>Scala</item>
        <item>Perl</item>
    </string-array>
    <string name="title_activity_video">VideoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="article">Eighty percent of adults 65 and older have at least one chronic condition, while 68% have two or more.Learn more about the most common chronic medical conditions and how you can prevent or manage them.If you or someone you know is struggling to manage a chronic illness, the Chronic Disease Self-Management Program may be able to help.Age, family genetics, and gender make it nearly impossible for older adults to avoid becoming a chronic disease statistic. Eighty percent of adults 65 and older have at least one condition, while 68% have two or more. You probably have a parent or grandparent who is managing a condition right now, or perhaps you are managing one yourself.With these kinds of odds, you might wonder if there is anything you can do to prevent the onset of a chronic medical condition, or make managing an existing one easier. The answer is yes.Here are 10 common chronic conditions adults 65+ on Medicare were treated for in 2015, and what you should know about each. And you might want to consider a medical alert monitoring system to help maintain indepdence when living with one of these chronic conditions.
    Eighty percent of adults 65 and older have at least one chronic condition, while 68% have two or more.Learn more about the most common chronic medical conditions and how you can prevent or manage them.If you or someone you know is struggling to manage a chronic illness, the Chronic Disease Self-Management Program may be able to help.Age, family genetics, and gender make it nearly impossible for older adults to avoid becoming a chronic disease statistic. Eighty percent of adults 65 and older have at least one condition, while 68% have two or more. You probably have a parent or grandparent who is managing</string>

    <string name="remind_to_take_medicine">Remind me to take medicine</string>
    <string-array name="pref_remind_me_to_take_medicine">
        <item>After 10 minutes</item>
        <item>After 15 minutes</item>
        <item>After 20 minutes</item>
        <item>After 30 minutes</item>
        <item>After 1 hour</item>
    </string-array>
    <string-array name="pref_duration">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="pref_key_night" translatable="false">key_night_mode</string>
    <string name="pref_night_title">Night mode</string>
    <string name="pref_night_summary">Select a dark or light theme.</string>
    <string name="pref_night_dialog">Set Night mode</string>
    <string name="pref_night_auto" translatable="false">auto</string>
    <string name="pref_night_on" translatable="false">on</string>
    <string name="pref_night_off" translatable="false">off</string>
    <string name="night_mode_auto">Automatic</string>
    <string name="night_mode_on">Night mode</string>
    <string name="night_mode_off">Day mode</string>

</resources>