<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Setting"
        android:textSize="10px"
        android:layout="@layout/settinglayout"
        >
    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_baseline_build_24"
        app:title="General">
        <ListPreference

            android:defaultValue="1"
            android:entries="@array/pref_version_list"
            android:entryValues="@array/pref_version_list"
            android:key="pref_version"
            android:summary="Version 1.0"
            android:title="Version" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_lang_list"
            android:entryValues="@array/pref_lang_list"
            android:key="pref_lang"
            android:summary="Select"
            android:title="Language/Region" />

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="Notification">
        <SwitchPreference
            android:defaultValue="false"
            android:key="allow_notification"
            android:summary="Enable/Disable"
            android:title="Allow Notification"
            app:summaryOff="Disable"
            app:summaryOn="Enable" />
        <ListPreference
            android:defaultValue="3"
            android:dialogTitle="@string/remind_to_take_medicine"
            android:entries="@array/pref_remind_me_to_take_medicine"
            android:entryValues="@array/pref_duration"
            android:key="remind"
            android:summary="Add remind"
            android:title="Remind me to take medicine" />

        <SeekBarPreference
            android:key="volume"
            app:title="volume"
            app:showSeekBarValue="true"
            app:defaultValue="50"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_baseline_looks_24"
        app:title="Appearance">

        <ListPreference
            android:defaultValue="@string/pref_night_auto"
            android:dialogTitle="@string/pref_night_dialog"
            android:entries="@array/night_mode"
            android:entryValues="@array/night_mode_value"
            app:key="@string/pref_key_night"
            app:summary="@string/pref_night_summary"
            app:title="@string/pref_night_title" />



        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_font_list"
            android:entryValues="@array/pref_font_list"
            android:key="pref_font"
            android:summary="Font Style"
            android:title="Font" />

    </PreferenceCategory>

<!--    <PreferenceCategory-->
<!--        app:title="Edit Account"-->
<!--        android:summary="To edit"-->
<!--        android:icon="@drawable/ic_baseline_arrow_forward_ios_24">-->
<!--    </PreferenceCategory>-->

<!--    <PreferenceCategory-->
<!--        app:title="Logout"-->
<!--        android:icon="@drawable/ic_baseline_logout_24">-->
<!--    </PreferenceCategory>-->

</PreferenceScreen>